style/style.css
@import url("https://fonts.googleapis.com/css2?family=League+Spartan:wght@100;200;300;400;500;600;700;800;900&display=swap");

* {
  font-family: "League Spartan", sans-serif;
  transition: ease 0.15s;
  /* box-shadow:inset 0px 0px 0px 1px #f00; */
}

@media only screen and (max-width: 800px) {
  
}

html {
  height: auto;
  width: auto;
}

body {
  margin: 0;
  height: auto;
  /* min-height: auto */
  width: 100%;
}

:root {
  --darkgray: hsl(0, 0%, 63%);
  --black: hsl(0, 0%, 0%);
  --white: hsl(0, 0%, 100%);
  --verydarkgray: hsl(0, 0%, 27%);
}

.bar {
  position: absolute;
  color: white;
  display: flex;
  margin-top: 60px;
  margin-left: 60px;

  margin-left: auto;
  margin-right: auto;
  width: 62px;
  left: 0;
  right: 0;
}

.bar .btn {
  margin-right: 30px;
}

.bar .logo {
  margin-right: 50px;
}

.hide {
  display: none !important;
}

.btn {
  cursor: pointer;
}

.row1,
.row2 {
  display: flex;
  overflow: scroll;
}

.row1 {
  /* height: 60%; */
  height: 66.66vh;
}

.row2 {
  /* height: 35vh; */
  height: 33.34vh;
}

.img-hero {
  width: 65%;
  object-fit: cover;
}

.block1 {
  padding: 75px;
  width: auto;
  height: auto;
  box-sizing: border-box;
  max-width: 70ch;

  flex-direction: column;
  justify-content: center;
  display: flex;

  position: relative;
}
/*child*/
.arrow-left-right {
  position: absolute;
  left: 0;
  bottom: 0;
}
.img-icon-angle {
  background-color: black;
  padding: 20px 25px 20px 25px;
  width: 9px;
}
.angle-left {
  float: left;
}
.angle-left,
.angle-right {
  display: block;
  /* removes the gap that appears when pos. is abs. and bottom is 0 */
}
.angle-left:hover,
.angle-right:hover {
  background-color: var(--verydarkgray);
}

.rotateimg180 {
  -webkit-transform: rotate(180deg);
  -moz-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  -o-transform: rotate(180deg);
  transform: rotate(180deg);
}

.div-about-left {
  width: 100%;
  height: inherit;
}
.img-about-left {
  width: 100%;
  height: inherit;
  object-fit: cover;
}
.block2 {
  padding: 50px;
  width: 100%;
  height: auto;
  box-sizing: border-box;
  max-width: 60ch;
  overflow: scroll;
}

.div-about-right {
  height: inherit;
  width: 100%;
}
.img-about-right {
  width: 100%;
  height: inherit;
  object-fit: cover;
}

h1 {
  letter-spacing: -0.5px;
  font-weight: 600;
}

h2 {
  letter-spacing: 5px;
  font-size: 16px;
}

h4 {
  font-weight: 550;
  font-size: 12.5px;
  letter-spacing: 10px;
}

h5 {
  line-height: 18px;
  font-weight: 450;
  color: var(--darkgray);
}

.attribution h5 {
  /* display: none; */
}

a,
a:hover,
a:focus,
a:active {
  text-decoration: none;
  color: var(--verydarkgray);
}

.btn-shop-now {
  display: flex;
  flex-wrap: nowrap;
  /* width: 100%; */
  white-space: nowrap;
}
.btn-shop-now:hover {
  /* color: var(--darkgray); */
  filter: invert(81%) sepia(26%) saturate(0%) hue-rotate(222deg) brightness(76%) contrast(87%);
}

.img-arrow {
  align-self: center;
  margin-left: 20px;
  width: 45px;
  height: 15px;
  display: block;
}

.hover-underline-animation {
  display: inline-block;
  position: relative;
  /* color: #0087ca; */
}

.hover-underline-animation:after {
  content: '';
  position: absolute;
  width: 100%;
  transform: scaleX(0);
  height: 2px;
  bottom: -4px;
  left: 0;
  background-color: var(--white);
  transform-origin: bottom right;
  transition: transform 0.25s ease-out;
}

.hover-underline-animation:hover:after {
  transform: scaleX(1);
  transform-origin: bottom left;
}

